--- a/backend_notice/src/main/resources/application.properties
+++ b/backend_notice/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port = 7000
 
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxx_notice?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#mybatis.mapper-locations = classpath:/mapper/*
+
+spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
+spring.application.name = backend_notice
