--- a/backend_user/src/main/resources/application.properties
+++ b/backend_user/src/main/resources/application.properties
@@ -1,4 +1,42 @@
 server.port=7001
 
+## Nacos
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
-spring.application.name = backend_user
+spring.application.name = backend-user
+
+## Mysql
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aminer?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.type-aliases-package = com.backend.common.entity
+mybatis.mapper-locations = classpath:/mapper/*
+
+## Redis
+spring.redis.host = 127.0.0.1
+spring.redis.port = 6379
+spring.redis.timeout = 10000
+spring.redis.jedis.pool.max-active = 10
+spring.redis.jedis.pool.max-idle = 8
+spring.redis.jedis.pool.min-idle = 2
+spring.redis.jedis.pool.max-wait = 100
+
+## RabbitMQ
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
+## mail
+spring.mail.host = smtp.qq.com
+spring.mail.port = 465
+spring.mail.username = 1302540061@qq.com
+spring.mail.password = baubdogpsjwwgiea
+spring.mail.default-encoding = UTF-8
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.ssl.enable = true
+
+#spring.security.user.name=root
+#spring.security.user.password=root
