--- a/backend_notice/src/main/resources/application.properties
+++ b/backend_notice/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port = 7000
 
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxx_notice?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#mybatis.mapper-locations = classpath:/mapper/*
-
+## Nacos
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
-spring.application.name = backend_notice
+spring.application.name = backend-notice
+
+## Mysql
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/aminer?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.type-aliases-package = com.backend.common.entity
+mybatis.mapper-locations = classpath:/mapper/*
+
