--- a/backend_portal/src/main/resources/application.properties
+++ b/backend_portal/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=7002
 
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend_portal
+
+#mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/coffee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis-plus.global-config.db-config.id-type=auto
+mybatis-plus.configuration.map-underscore-to-camel-case=true
