--- a/backend_portal/src/main/resources/application.properties
+++ b/backend_portal/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.global-config.db-config.id-type=auto
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+## mail
+spring.mail.host = smtp.126.com
+spring.mail.port = 465
+spring.mail.username = portal_attest@126.com
+spring.mail.password = DHYQGOONQXKKQVSM
+spring.mail.default-encoding = UTF-8
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
+spring.mail.properties.mail.smtp.ssl.enable = true
