--- a/backend_user/src/main/resources/application.properties
+++ b/backend_user/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=7001
 
+authNoInterceptURL: /user/checkToken,/user/login,/user/register,/user/isLogined
+
+## sentinel
+spring.cloud.sentinel.transport.dashboard = localhost:8080
+# 启动该服务，会在应用程序的相应服务器上启动HTTP Server，并且该服务器将与Sentinel dashboard进行交互
+spring.cloud.sentinel.transport.port = 8719
+# 开启监控
+feign.sentinel.enabled = true
+
 ## Nacos
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend-user
@@ -37,6 +46,3 @@ spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.ssl.enable = true
-
-#spring.security.user.name=root
-#spring.security.user.password=root
