--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -12,16 +12,17 @@ spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend-server
 
 ## Mysql
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/coffee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mybatis-plus.global-config.db-config.id-type=auto
-mybatis-plus.configuration.map-underscore-to-camel-case=true
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/coffee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+mybatis-plus.global-config.db-config.id-type = auto
+mybatis-plus.configuration.map-underscore-to-camel-case = true
 
 ## Redis
 spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
+spring.redis.password = root
 spring.redis.timeout = 10000
 spring.redis.jedis.pool.max-active = 10
 spring.redis.jedis.pool.max-idle = 8
