--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -19,6 +19,11 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 mybatis-plus.global-config.db-config.id-type = auto
 mybatis-plus.configuration.map-underscore-to-camel-case = true
 
+##MongoDB
+spring.data.mongodb.database=coffee
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+
 ## Redis
 spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
