--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -8,20 +8,20 @@ spring.cloud.sentinel.transport.port = 8719
 feign.sentinel.enabled = true
 
 ## Nacos
-spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
+## spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend-server
 
 ## Mysql
 spring.datasource.username = root
 spring.datasource.password = root
-spring.datasource.url = jdbc:mysql://127.0.0.1:3306/coffee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://106.13.138.133:3306/coffee?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 mybatis-plus.global-config.db-config.id-type = auto
 mybatis-plus.configuration.map-underscore-to-camel-case = true
 
 ##MongoDB
 spring.data.mongodb.database=coffee
-spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.host=106.13.138.133
 spring.data.mongodb.port=27017
 
 ## Redis
@@ -35,10 +35,10 @@ spring.redis.jedis.pool.min-idle = 2
 spring.redis.jedis.pool.max-wait = 100
 
 ## RabbitMQ
-spring.rabbitmq.host = 127.0.0.1
-spring.rabbitmq.port = 5672
-spring.rabbitmq.username = guest
-spring.rabbitmq.password = guest
+## spring.rabbitmq.host = 127.0.0.1
+## spring.rabbitmq.port = 15672
+## spring.rabbitmq.username = guest
+## spring.rabbitmq.password = guest
 
 ## mail
 spring.mail.host = smtp.126.com
