门户、通知、申诉

--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.cloud.sentinel.transport.port = 8719
 feign.sentinel.enabled = true
 
 ## Nacos
-## spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend-server
 
 ## Mysql
@@ -35,10 +35,10 @@ spring.redis.jedis.pool.min-idle = 2
 spring.redis.jedis.pool.max-wait = 100
 
 ## RabbitMQ
-## spring.rabbitmq.host = 127.0.0.1
-## spring.rabbitmq.port = 15672
-## spring.rabbitmq.username = guest
-## spring.rabbitmq.password = guest
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 15672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
 
 ## mail
 spring.mail.host = smtp.126.com
