--- a/backend_gateway/src/main/resources/application.yml
+++ b/backend_gateway/src/main/resources/application.yml
@@ -6,7 +6,8 @@ ignore:
     - /user/demo
     - /user/login
     - /user/register
-    - /user/checkToken
+    - /favor/my_collection
+    - /follow/my_following
 
 spring:
   cloud:
