--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -21,7 +21,8 @@ mybatis-plus.configuration.map-underscore-to-camel-case = true
 
 ##MongoDB
 spring.data.mongodb.database=coffee
-spring.data.mongodb.host=106.13.138.133
+spring.data.mongodb.host=119.3.213.10
+#spring.data.mongodb.host=106.13.138.133
 spring.data.mongodb.port=27017
 
 ## Redis
