--- a/backend_search/src/main/resources/application.properties
+++ b/backend_search/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-server.port=7001
+server.port = 7001
 
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend_search
+
+##MongoDB
+spring.data.mongodb.database = coffee
+spring.data.mongodb.host = 119.3.213.10
+spring.data.mongodb.port = 27017
