--- a/backend_gateway/src/main/resources/application.yml
+++ b/backend_gateway/src/main/resources/application.yml
@@ -15,11 +15,23 @@ spring:
       discovery:
         server-addr: 127.0.0.1:8848
     gateway:
+      # 跨域
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedHeaders: "*"
+            allowedOrigins: "*"
+            allowedMethods:
+              - GET
+                POST
+                DELETE
+                PUT
+                OPTION
       routes:
         - id: backend-search
           uri: lb://backend-search
           predicates:
-            - Path=/search/**
+            - Path=/paper/**
         - id: backend-server
           uri: lb://backend-server
           predicates:
