--- a/backend_search/src/main/resources/application.properties
+++ b/backend_search/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.application.name = backend_search
 ##MongoDB
 spring.data.mongodb.database = coffee
 spring.data.mongodb.host = 119.3.213.10
+##spring.data.mongodb.host = 127.0.0.1
 spring.data.mongodb.port = 27017
