数据库添加密码

--- a/backend_search/src/main/resources/application.properties
+++ b/backend_search/src/main/resources/application.properties
@@ -4,6 +4,4 @@ spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend_search
 
 ##MongoDB
-spring.data.mongodb.database = coffee
-spring.data.mongodb.host = 119.3.213.10
-spring.data.mongodb.port = 27017
+spring.data.mongodb.uri = mongodb://root:root@119.3.213.10:27017/coffee
