--- a/backend_search/src/main/resources/application.properties
+++ b/backend_search/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 7001
 
 spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
-spring.application.name = backend_search
+spring.application.name = backend-search
 
 ##MongoDB
 spring.data.mongodb.uri = mongodb://root:root@119.3.213.10:27017/coffee
