--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.data.mongodb.uri = mongodb://root:root@119.3.213.10:27017/coffee
 ## Redis
 spring.redis.host = 127.0.0.1
 spring.redis.port = 6379
+spring.redis.database = 0
 spring.redis.password = root
 spring.redis.timeout = 10000
 spring.redis.jedis.pool.max-active = 10
