--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -21,9 +21,9 @@ mybatis-plus.configuration.map-underscore-to-camel-case = true
 
 ##MongoDB
 spring.data.mongodb.uri = mongodb://root:root@119.3.213.10:27017/coffee
-#spring.data.mongodb.database=coffee
-#spring.data.mongodb.host=119.3.213.10
-#spring.data.mongodb.port=27017
+spring.data.mongodb.database=coffee
+spring.data.mongodb.host=119.3.213.10
+spring.data.mongodb.port=27017
 
 ## Redis
 spring.redis.host = 127.0.0.1
