--- a/backend_server/src/main/resources/application.properties
+++ b/backend_server/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.cloud.sentinel.transport.port = 8719
 feign.sentinel.enabled = true
 
 ## Nacos
-##spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
+spring.cloud.nacos.discovery.server-addr = 127.0.0.1:8848
 spring.application.name = backend-server
 
 ## Mysql
